# Codessey

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
agents/: conductor.py  gemini_client.py  ingestion.py  llm_client.py  logic_agent.py  performance_agent.py  readability_agent.py  security_agent.py  specialist_base.py  workflow.py
app/: cli.py  main.py  review.py  routes.py
public/: app.js  index.html  styles.css
schemas/: analysis_result.py  code_chunk.py  review_report.py
security/: input_sanitizer.py  redactor.py  url_validator.py
static/: app.js  index.html  styles.css
tests/: test_conductor.py  test_edge_cases.py  test_ingestion.py  test_llm_retry.py  test_security.py
tests/test_samples/: clean_function.py  hardcoded_secret.js  large_chunk.py  nested_loop.py  off_by_one.py  poor_naming.go  prompt_injection.py
utils/: code_chunker.py  language_detector.py  report_renderer.py
