[project]
name = "codessey"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk==2.2.0",
    "google-genai>=2.4",
    "fastapi>=0.133",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[tool.vercel]
entrypoint = "app.main:app"
